fix z-indexes and show label for chrome autofill

--- a/app/_css/animations.sass
+++ b/app/_css/animations.sass
@@ -63,13 +63,13 @@ $second: .5s;
 $delay: .2s;
 
 .showable
-  z-index: 4;
+  z-index: 90;
   +opacity(0);
   transition-delay: 0s;
 
   &.shown
     +opacity(1);
-    z-index: 6;
+    z-index: 91;
 
 .tab-content
   margin-top: $topbarh;
@@ -94,7 +94,6 @@ $delay: .2s;
   bottom: -55px;
   +opacity(0);
   transition: 0.3s;
-  z-index: 9;
 
 #form-common
   .pad
