--- a/app/_css/emi.sass
+++ b/app/_css/emi.sass
@@ -16,7 +16,7 @@
   top: 0;
   left: 0;
   height: 100%;
-  z-index: 8;
+  z-index: 100;
   border-radius: $br;
   display: none;
   width: 500px;
@@ -61,7 +61,6 @@
     padding: 6px 8px;
     float: left;
     width: 200px;
-    border-bottom: 1px solid #e9e9e9;
 
 #elem-emi
   display: none;
