--- a/app/_css/form.sass
+++ b/app/_css/form.sass
@@ -45,6 +45,8 @@ $bottom: 7px;
     position: absolute;
     top: $top;
     left: $left;
+    z-index: 1;
+    pointer-events: none;
 
 .font-loaded .elem label
   transition: 0.3s;
