--- a/app/_css/modal.sass
+++ b/app/_css/modal.sass
@@ -283,7 +283,7 @@ i
   position: relative;
   height: $topbarh + 1px;
   overflow: hidden;
-  z-index: 7;
+  z-index: 97;
 
 
 #topbar
@@ -352,7 +352,7 @@ i
   border-radius: 0 0 $br $br;
   background: #fafbfc;
   color: #777;
-  z-index: 13;
+  z-index: 97;
   button
     cursor: pointer;
     // pointer-events: none;
