--- a/app/_css/overlay.sass
+++ b/app/_css/overlay.sass
@@ -7,7 +7,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 8;
+  z-index: 99;
   border-radius: $br;
 
 #overlay
